fixed register login width on mobile

--- a/views/static/style.css
+++ b/views/static/style.css
@@ -328,7 +328,36 @@ li.dropdown{
 }
 
 
+
+
 @media (max-width: 768px){
+
+
+.form{
+	width: 100%;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 75px;
+	position: relative;
+	border: 1px solid white;
+	border-radius: 1px 30px;
+
+}
+
+.upload-form{
+	padding-top: 180px;
+}
+
+.form img#profileImage{
+	margin-top: -60px;
+	margin-bottom: 25px;
+}
+
+.form .preview{
+	position:absolute;
+	right: 170px;
+	top: -85px;
+}
 
 	.postBackground{
 		background-repeat: no-repeat;
@@ -418,24 +447,6 @@ li.dropdown{
 .dropdown-content a:hover:not(.active){
 	background-color: #0a0a0a;
 }
-.form{
-	width: 500px;
-	text-align: center;
-	margin: 0 auto;
-	margin-top: 75px;
-	position: relative;
-	border: 1px solid white;
-	border-radius: 1px 30px;
-}
-
-.upload-form{
-	padding-top: 180px;
-}
-
-.form img#profileImage{
-	margin-top: -60px;
-	margin-bottom: 25px;
-}
 	nav ul{
 		list-style-type: none;
 		float: left;
@@ -497,8 +508,6 @@ li.dropdown{
     margin-right: 75px;
 }
 
-.bannerUser form{
-}
 .bannerUser input{
     width: 150px;
 }
@@ -726,6 +735,31 @@ li.dropdown{
 		width: 550px;
 		float: right;
 	}
+
+.form{
+	width: 500px;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 75px;
+	position: relative;
+	border: 1px solid white;
+	border-radius: 1px 30px;
+}
+
+.upload-form{
+	padding-top: 180px;
+}
+
+.form img#profileImage{
+	margin-top: -60px;
+	margin-bottom: 25px;
+}
+
+.form .preview{
+	position:absolute;
+	right: 170px;
+	top: -85px;
+}
 }
 .postFooter .dropdown{
 		width:22px;
@@ -797,30 +831,6 @@ li.dropdown{
 	border: 3px solid #8c50a0;
 }
 
-.form{
-	width: 500px;
-	text-align: center;
-	margin: 0 auto;
-	margin-top: 75px;
-	position: relative;
-	border: 1px solid white;
-	border-radius: 1px 30px;
-}
-
-.upload-form{
-	padding-top: 180px;
-}
-
-.form img#profileImage{
-	margin-top: -60px;
-	margin-bottom: 25px;
-}
-
-.form .preview{
-	position:absolute;
-	right: 170px;
-	top: -85px;
-}
 
 .preview .post{
 	background-color: black;
